src/test/deca/context/valid/custom/object/decl_class.deca
class Car {
    protected int maxSpeed;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }
}