src/test/deca/context/invalid/custom/object/decl_class.deca
class Car {
    protected int maxSpeed;

    void setMaxSpeed(float newSpeed) {
        maxSpeed = newSpeed;
    }
}